--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-undraw",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Load undraw illustrations and generate a svelte component from it.",
   "main": "index.js",
   "repository": {
@@ -26,5 +26,8 @@
   },
   "scripts": {
     "test": "jest test.js"
+  },
+  "bin": {
+    "svelte-undraw": "./index.js"
   }
 }
